k8s/users-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-lb
  labels:
    app: users-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: users-service
